Conform to PSR-2, add Composer/PHPUnit configs
Update Makefile, add SETUP.md
Add PHP CodeSniffer
Use @group annotation to skip tests

--- a/config.json
+++ b/config.json
@@ -4,15 +4,15 @@
   "repository": "https://github.com/exercism/xphp",
   "active": false,
   "problems": [
-    "trinary",
-    "wordy",
-    "clock"
+    "Trinary",
+    "Wordy",
+    "Clock"
   ],
   "deprecated": [
 
   ],
   "ignored": [
-
+    "vendor"
   ],
   "foregone": [
 
