Fetch latest release of configlet in travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ php:
 script:
   - make style-check
   - make test
-  - ./bin/configlet-linux-amd64 .
+  - ./bin/fetch-configlet
+  - ./bin/configlet .
