--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
+---
 language: php
-
 php:
-  - 5.6
-
+- 5.6
 script:
-  - make style-check
-  - make test
-  - ./bin/fetch-configlet
-  - ./bin/configlet .
+- make style-check
+- make test
+- "./bin/fetch-configlet"
+- "./bin/configlet ."
