--- a/config.json
+++ b/config.json
@@ -8,6 +8,7 @@
     "gigasecond",
     "rna-transcription",
     "raindrops",
+    "isogram",
     "difference-of-squares",
     "roman-numerals",
     "robot-name",
