--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
   "problems": [
     "hamming",
     "gigasecond",
+    "pangram",
     "rna-transcription",
     "raindrops",
     "difference-of-squares",
