Sieve: Tests and Example

--- a/config.json
+++ b/config.json
@@ -9,6 +9,7 @@
     "rna-transcription",
     "raindrops",
     "difference-of-squares",
+    "sieve",
     "roman-numerals",
     "robot-name",
     "leap",
