Implement largest-series-product

--- a/config.json
+++ b/config.json
@@ -12,6 +12,7 @@
     "raindrops",
     "isogram",
     "difference-of-squares",
+    "largest-series-product",
     "roman-numerals",
     "robot-name",
     "leap",
