Add pig-latin exercise

--- a/config.json
+++ b/config.json
@@ -14,6 +14,7 @@
     "difference-of-squares",
     "largest-series-product",
     "roman-numerals",
+    "pig-latin",
     "robot-name",
     "leap",
     "word-count",
