--- a/config.json
+++ b/config.json
@@ -38,5 +38,127 @@
   ],
   "foregone": [
 
-  ]
+  ],
+  "exercises": [
+  {
+    "slug": "hello-world",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
+    "slug": "hamming",
+    "difficulty": 2,
+    "topics": []
+  },
+  {
+    "slug": "gigasecond",
+    "difficulty": 2,
+    "topics": []
+  },
+  {
+    "slug": "bob",
+    "difficulty": 4,
+    "topics": []
+  },
+  {
+    "slug": "pangram",
+    "difficulty": 4,
+    "topics": []
+  },
+  {
+    "slug": "rna-transcription",
+    "difficulty": 3,
+    "topics": []
+  },
+  {
+    "slug": "raindrops",
+    "difficulty": 6,
+    "topics": []
+  },
+  {
+    "slug": "isogram",
+    "difficulty": 4,
+    "topics": []
+  },
+  {
+    "slug": "difference-of-squares",
+    "difficulty": 2,
+    "topics": []
+  },
+  {
+    "slug": "largest-series-product",
+    "difficulty": 5,
+    "topics": []
+  },
+  {
+    "slug": "roman-numerals",
+    "difficulty": 4,
+    "topics": []
+  },
+  {
+    "slug": "pig-latin",
+    "difficulty": 4,
+    "topics": []
+  },
+  {
+    "slug": "robot-name",
+    "difficulty": 3,
+    "topics": []
+  },
+  {
+    "slug": "leap",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
+    "slug": "word-count",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
+    "slug": "anagram",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
+    "slug": "trinary",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
+    "slug": "bowling",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
+    "slug": "clock",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
+    "slug": "wordy",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
+    "slug": "connect",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
+    "slug": "minesweeper",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
+    "slug": "change",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
+    "slug": "phone-number",
+    "difficulty": 1,
+    "topics": []
+  }
+]
 }
