--- a/config.json
+++ b/config.json
@@ -30,7 +30,8 @@
     "phone-number",
     "beer-song",
     "atbash-cipher",
-    "binary"
+    "binary",
+    "braket-push"
   ],
   "deprecated": [
 
@@ -170,6 +171,11 @@
   },
   {
     "slug": "atbash-cipher",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
+    "slug": "bracket-push",
     "difficulty": 1,
     "topics": []
   },
