Add accumulate exercise (#111)
* Add binary exercise.

* Change casing to camel case.

* Add binary exercise.

* Add accumulate exercise.

* Fix CS.

* Revert "Add binary exercise."

This reverts commit d62f7dfeb231c26f02610de7770ad3f23e45202a.

* Move  mock classes back into the test file.

* Allow multiple classes per file.

Solves #112

* Remove remnants of binary exercise from config.json.

Solves #112

* Refactor tests.

--- a/config.json
+++ b/config.json
@@ -31,7 +31,8 @@
     "beer-song",
     "atbash-cipher",
     "binary",
-    "braket-push"
+    "braket-push",
+    "accumulate"
   ],
   "deprecated": [
 
@@ -181,6 +182,11 @@
   },
   {
     "slug": "binary",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
+    "slug": "accumulate",
     "difficulty": 1,
     "topics": []
   }
