Adding the allergies exercices

--- a/config.json
+++ b/config.json
@@ -178,6 +178,11 @@
     "slug": "etl",
     "difficulty": 1,
     "topics": []
+  },
+  {
+    "slug": "allergies",
+    "difficulty": 3,
+    "topics": []
   }
-]
+  ]
 }
