Adding the allergies exercices

--- a/config.json
+++ b/config.json
@@ -168,6 +168,11 @@
     "slug": "acronym",
     "difficulty": 1,
     "topics": []
+  },
+  {
+    "slug": "allergies",
+    "difficulty": 3,
+    "topics": []
   }
 ]
 }
