--- a/config.json
+++ b/config.json
@@ -173,6 +173,11 @@
     "slug": "nucleotide-count",
     "difficulty": 1,
     "topics": []
+  },
+  {
+    "slug": "etl",
+    "difficulty": 1,
+    "topics": []
   }
 ]
 }
