--- a/config.json
+++ b/config.json
@@ -175,6 +175,11 @@
     "topics": []
   },
   {
+    "slug": "triangle",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
     "slug": "etl",
     "difficulty": 1,
     "topics": []
