Creates the simple linked list exercise.

--- a/config.json
+++ b/config.json
@@ -180,6 +180,11 @@
     "topics": []
   },
   {
+    "slug": "simple-linked-list",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
     "slug": "etl",
     "difficulty": 1,
     "topics": []
