Implements the space age test.

--- a/config.json
+++ b/config.json
@@ -185,6 +185,11 @@
     "topics": []
   },
   {
+    "slug": "space-age",
+    "difficulty": 1,
+    "topics": []
+  },
+  {
     "slug": "allergies",
     "difficulty": 3,
     "topics": []
