--- a/config.json
+++ b/config.json
@@ -70,6 +70,11 @@
     "topics": []
   },
   {
+    "slug": "sieve",
+    "difficulty": 1,
+    "topics": []
+    },
+  {
     "slug": "pig-latin",
     "difficulty": 4,
     "topics": []
