--- a/config.json
+++ b/config.json
@@ -17,87 +17,137 @@
   {
     "slug": "hello-world",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Text formatting",
+      "Optional values"
+    ]
   },
   {
     "slug": "hamming",
     "difficulty": 2,
-    "topics": []
+    "topics": [
+      "Strings",
+      "Filtering"
+    ]
   },
   {
     "slug": "gigasecond",
     "difficulty": 2,
-    "topics": []
+    "topics": [
+      "Dates"
+    ]
   },
   {
     "slug": "bob",
     "difficulty": 4,
-    "topics": []
+    "topics": [
+      "Strings",
+      "Control-flow (if-else statements)"
+    ]
   },
   {
     "slug": "pangram",
     "difficulty": 4,
-    "topics": []
+    "topics": [
+      "Strings"
+    ]
   },
   {
     "slug": "rna-transcription",
     "difficulty": 3,
-    "topics": []
+    "topics": [
+      "Strings",
+      "Transforming"
+    ]
   },
   {
     "slug": "raindrops",
     "difficulty": 6,
-    "topics": []
+    "topics": [
+      "Text formatting",
+      "Filtering"
+    ]
   },
   {
     "slug": "isogram",
     "difficulty": 4,
-    "topics": []
+    "topics": [
+      "Strings",
+      "Filtering"
+    ]
   },
   {
     "slug": "difference-of-squares",
     "difficulty": 2,
-    "topics": []
+    "topics": [
+      "Integers"
+    ]
   },
   {
     "slug": "largest-series-product",
     "difficulty": 5,
-    "topics": []
+    "topics": [
+      "Strings",
+      "Integers",
+      "Transforming"
+    ]
   },
   {
     "slug": "roman-numerals",
     "difficulty": 4,
-    "topics": []
+    "topics": [
+      "Control-flow (loops)",
+      "Transforming"
+    ]
   },
   {
   "slug": "sieve",
   "difficulty": 1,
-  "topics": []
+  "topics": [
+    "Filtering",
+    "Mathematics"
+    ]
   },
   {
     "slug": "pig-latin",
     "difficulty": 4,
-    "topics": []
+    "topics": [
+      "Strings",
+      "Transforming"
+    ]
   },
   {
     "slug": "robot-name",
     "difficulty": 3,
-    "topics": []
+    "topics": [
+      "Randomness",
+      "Strings",
+      "Classes"
+    ]
   },
   {
     "slug": "leap",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Integers"
+    ]
   },
   {
     "slug": "word-count",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Strings",
+      "Dictionaries",
+      "Transforming"
+    ]
   },
   {
     "slug": "anagram",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Strings",
+      "Filtering"
+    ]
   },
   {
     "slug": "trinary",
@@ -107,17 +157,27 @@
   {
     "slug": "bowling",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Algorithms",
+      "Control-flow (loops)"
+    ]
   },
   {
     "slug": "clock",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Time",
+      "Structural equality"
+    ]
   },
   {
     "slug": "wordy",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Parsing",
+      "Strings",
+      "Transforming"
+    ]
   },
   {
     "slug": "connect",
@@ -127,32 +187,51 @@
   {
     "slug": "minesweeper",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Parsing",
+      "Transforming"
+    ]
   },
   {
     "slug": "change",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Integers",
+      "Arrays"
+    ]
   },
   {
     "slug": "phone-number",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Parsing",
+      "Transforming"
+    ]
   },
   {
     "slug": "beer-song",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Text formatting",
+      "Algorithms"
+    ]
   },
   {
     "slug": "atbash-cipher",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Strings",
+      "Algorithms",
+      "Transforming"
+    ]
   },
   {
     "slug": "bracket-push",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Parsing",
+      "Strings"
+    ]
   },
   {
     "slug": "binary",
@@ -162,42 +241,67 @@
   {
     "slug": "accumulate",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Extension methods",
+      "Sequences",
+      "Transforming"
+    ]
   },
   {
     "slug": "variable-length-quantity",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Bitwise operations",
+      "Algorithms"
+    ]
   },
   {
     "slug": "acronym",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Strings",
+      "Transforming"
+    ]
   },
   {
     "slug": "nucleotide-count",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Dictionaries",
+      "Strings"
+    ]
   },
   {
     "slug": "triangle",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Integers",
+      "Enumerations"
+    ]
   },
   {
     "slug": "etl",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Dictionaries",
+      "Lists",
+      "Transforming"
+    ]
   },
   {
     "slug": "space-age",
     "difficulty": 1,
-    "topics": []
+    "topics": [
+      "Floating-point numbers"
+    ]
   },
   {
     "slug": "allergies",
     "difficulty": 3,
-    "topics": []
+    "topics": [
+      "Bitwise operations",
+      "Filtering"
+    ]
   },
   {
     "slug": "markdown",
