Add Book Store exercise

--- a/config.json
+++ b/config.json
@@ -331,6 +331,13 @@
       "Algorithms",
       "Transforming"
     ]
+  },
+  {
+    "slug": "book-store",
+    "difficulty": 3,
+    "topics": [
+      "Algorithms"
+    ]
   }
   ]
 }
