Add Scrabble Score exercise.

--- a/config.json
+++ b/config.json
@@ -338,6 +338,15 @@
     "topics": [
       "Algorithms"
     ]
+  },
+  {
+    "slug": "scrabble-score",
+    "difficulty": 2,
+    "topics": [
+      "Strings",
+      "Control-flow (loops)",
+      "Integers"
+    ]
   }
   ]
 }
