Add exercise to config.json, fix style issues, add extra tests

--- a/config.json
+++ b/config.json
@@ -372,6 +372,11 @@
       "slug": "perfect-numbers",
       "difficulty": 1,
       "topics": []
+  },
+  {
+      "slug": "sum-of-multiples",
+      "difficulty": 2,
+      "topics" : []
   }
   ]
 }
