Add the binary search exercise

--- a/config.json
+++ b/config.json
@@ -387,6 +387,11 @@
     "slug": "nth-prime",
     "difficulty": 3,
     "topics" : []
+  },
+   {
+    "slug": "binary-search",
+    "difficulty": 3,
+    "topics" : []
   }
   ]
 }
