[PHP-Exercise][FlattenArray] update configration for flatten array exercise php

--- a/config.json
+++ b/config.json
@@ -566,6 +566,13 @@
       "topics": [
 
       ]
+    },
+    {
+      "slug": "flatten-array",
+      "difficulty": 2,
+      "topics": [
+        "Arrays"
+      ]
     }
   ]
 }
