[PHP-Exercise][FlattenArray] added uuid in config

--- a/config.json
+++ b/config.json
@@ -568,6 +568,7 @@
       ]
     },
     {
+      "uuid": "9dede68f-6b48-4142-88fd-0cf2c9de7207",
       "slug": "flatten-array",
       "difficulty": 2,
       "topics": [
