Implements exercise flatten-array (#171)
* Implement exercise flatten-array

* [PHP-Exercise][FlattenArray] update configration for flatten array exercise php

* [PHP-Exercise][FlattenArray] added test case and example func for flatten array exercise php

* [PHP-Exercise][FlattenArray] added newline EOF

* [PHP-Exercise][FlattenArray] Fix PSR standards

* [PHP-Exercise][FlattenArray] Update skip testcases

* [PHP-Exercise][FlattenArray] Renamed test case fle

* [PHP-Exercise][FlattenArray] Updated require function filename

* [PHP-Exercise][FlattenArray] Updated uuid into config

* [PHP-Exercise][FlattenArray] removed uuid in config

* [PHP-Exercise][FlattenArray] added uuid in config

--- a/config.json
+++ b/config.json
@@ -566,6 +566,14 @@
       "topics": [
 
       ]
+    },
+    {
+      "uuid": "9dede68f-6b48-4142-88fd-0cf2c9de7207",
+      "slug": "flatten-array",
+      "difficulty": 2,
+      "topics": [
+        "Arrays"
+      ]
     }
   ]
 }
