--- a/config.json
+++ b/config.json
@@ -588,6 +588,21 @@
         "Mathematics"
       ],
       "unlocked_by": "null"
+    },
+    {
+      "uuid": "cb413881-99b6-493f-bea2-89563dc173a6",
+      "core" :  false,
+      "difficulty" : 1,
+      "slug" : "transpose",
+      "topics": [
+        "loops",
+        "arrays",
+        "lists",
+        "matrices",
+        "strings",
+        "text_formatting"
+      ],
+      "unlocked_by": "null"
     }
   ]
 }
