--- a/config.json
+++ b/config.json
@@ -590,6 +590,14 @@
       "unlocked_by": "null"
     },
     {
+      "uuid": "C5D81BB4-7041-4EA9-B0ED-C3A17CF3E071",
+      "core" :  false,
+      "difficulty" : 1,
+      "slug" : "series",
+      "topics": [ ],
+      "unlocked_by": "null"
+    },
+    {
       "uuid": "cb413881-99b6-493f-bea2-89563dc173a6",
       "core" :  false,
       "difficulty" : 1,
