--- a/config.json
+++ b/config.json
@@ -613,6 +613,14 @@
       "unlocked_by": "null"
     },
     {
+      "uuid": "57E13615-4C88-42E1-A4AE-C2DED7A6FDB2",
+      "core" :  false,
+      "difficulty" : 1,
+      "slug" : "meetup",      
+      "topics": [ ],
+      "unlocked_by": "null"
+    },
+    {
       "uuid": "94AA4B63-66BA-4EF4-8E27-36C146682F05",
       "core" :  false,
       "difficulty" : 1,
