Implemented Rail fence cipher exercise (#177)
* Implementing Rail fence cipher exercise

* Implemented rail fence cipher exercise and rebase with Master

* Update comment and Testcase name

--- a/config.json
+++ b/config.json
@@ -635,6 +635,19 @@
       "slug" : "all-your-base",
       "topics": [ ],
       "unlocked_by": "null"
+    },
+    {
+      "uuid": "9aa69058-1bce-4b65-bd26-7270698f97ea",
+      "slug": "rail-fence-cipher",
+      "core": false,
+      "unlocked_by": null,
+      "difficulty": 1,
+      "topics": [
+        "algorithms",
+        "cryptography",
+        "text_formatting",
+        "lists"
+      ]
     }
   ]
 }
