Adds the affine cipher problem.
Adds README and some test data

The test data still needs to be formatted

Completes the tests

Function setup for affine example.

Adds the coprime check.

First pass at encode and decode.

Creating a cipherbet generator because strtr is better.

Corrects example and test.

--- a/config.json
+++ b/config.json
@@ -658,6 +658,18 @@
         "lists",
         "text_formatting"
       ]
+    },
+    {
+      "slug": "affine-cipher",
+      "uuid": "d1267415-aff5-411d-b267-49a4a2c8fda2",
+      "core": false,
+      "unlocked_by": null,
+      "difficulty": 3,
+      "topics": [
+        "cryptography",
+        "math",
+        "strings"
+      ]
     }
   ]
 }
