Adds blurb for php track

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "language": "PHP",
   "active": true,
-  "blurb": "",
+  "blurb": "PHP is a scripting language designed for web development, but also used as a general-purpose programming language. It's one of the most popular programming languages for web development and provides object-oriented capabilities.",
   "exercises": [
     {
       "slug": "hello-world",
