Adds the diamond test.

--- a/config.json
+++ b/config.json
@@ -658,6 +658,18 @@
         "lists",
         "text_formatting"
       ]
+    },
+    {
+      "slug": "diamond",
+      "uuid": "a7bc6837-59e4-46a1-89a2-a5aa44f5e66e",
+      "core": false,
+      "unlocked_by": null,
+      "difficulty": 1,
+      "topics": [
+        "lists",
+        "loops",
+        "strings"
+      ]
     }
   ]
 }
