--- a/config.json
+++ b/config.json
@@ -647,6 +647,17 @@
       ]
     },
     {
+      "slug": "palindrome-products",
+      "uuid": "abd68340-91b9-48c1-8567-79822bb2165c",
+      "core": false,
+      "unlocked_by": null,
+      "difficulty": 6,
+      "topics": [
+        "algorithms",
+        "math"
+      ]
+    },
+    {
       "slug": "rail-fence-cipher",
       "uuid": "9aa69058-1bce-4b65-bd26-7270698f97ea",
       "core": false,
